mạnh sửa lại giao diện order,config properties

--- a/webBanTiVi/src/main/resources/application.properties
+++ b/webBanTiVi/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:sqlserver://;serverName=localhost;databaseName=webbantivi;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
