--- a/webBanTiVi/pom.xml
+++ b/webBanTiVi/pom.xml
@@ -75,6 +75,10 @@
 			<version>12.4.1.jre11</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
