--- a/webBanTiVi/src/main/resources/application.properties
+++ b/webBanTiVi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=webbantivi;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=123
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=none
@@ -13,6 +13,6 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=opham084@gmail.com
-spring.mail.password=urdbsbcfrtbeibtl
+spring.mail.password=urdbsbcfrtbeibtl3
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true3
