--- a/webBanTiVi/src/main/resources/application.properties
+++ b/webBanTiVi/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=webbantivinew;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=webbantivi;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
